Kerbalism patch for the STV-1B Intelligence Module
Because the upstream master was inconsistent to what I got from SpaceDock I commited this way.

--- a/Integrated Phoenix Industries/Parts/SpaceTug/ipi_spaceTug_4xEngineMount.cfg
+++ b/Integrated Phoenix Industries/Parts/SpaceTug/ipi_spaceTug_4xEngineMount.cfg
@@ -5,26 +5,26 @@ PART
 	author = OrbitalPhoenix
 MODEL
 {
-	model = OrbitalPhoenixIndustries/Parts/SpaceTug/ipi_spaceTug_4xEngineMount
+	model = IntegratedPhoenixIndustries/Parts/SpaceTug/ipi_spaceTug_4xEngineMount
 }
 	scale = 1
 	rescaleFactor = 1
 	node_stack_top = 0.0, 0.585, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom01 = 0, 0.471, 1.009, 0.0, -1.0, 0.0, 1
-	node_stack_bottom02 = 0, 0.471, -1.009, 0.0, -1.0, 0.0, 1
-	node_stack_bottom03 = 1.009, 0.471, 0, 0.0, -1.0, 0.0, 1
-	node_stack_bottom04 = -1.009, 0.471, 0, 0.0, -1.0, 0.0, 1
+	node_stack_bottom01 = 0, 0.481, 0.99, 0.0, -1.0, 0.0, 1
+	node_stack_bottom02 = 0, 0.481, -0.99, 0.0, -1.0, 0.0, 1
+	node_stack_bottom03 = 0.99, 0.481, 0, 0.0, -1.0, 0.0, 1
+	node_stack_bottom04 = -0.99, 0.481, 0, 0.0, -1.0, 0.0, 1
 	node_stack_bottom05 = 0.0, -0.63, 0.0, 0.0, -1.0, 0.0, 2
 	TechRequired = fuelSystems
-	entryCost = 2400
-	cost = 800
+	entryCost = 2420
+	cost = 940
 	category = FuelTank
 	subcategory = 0
-	title = STV-000D-2 Engine Mount 4x
+	title = STV-0D-2 Engine Mount 4x
 	manufacturer = Integrated Phoenix Industries
-	description = Mounting and fuel module for a 4x engine config for the Space Tug Vehicle.
+	description = A 4x engine mount and fuel module for the Space Tug Vehicle.
 	attachRules = 1,0,1,1,0
-	mass = 1
+	mass = 0.5
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -40,14 +40,14 @@ MODEL
 	RESOURCE
 	{
 		name = LiquidFuel
-		amount = 475
-		maxAmount = 475
+		amount = 175
+		maxAmount = 175
 	}
 	
 	RESOURCE
 	{
 		name = Oxidizer
-		amount = 580
-		maxAmount = 580
+		amount = 214
+		maxAmount = 214
 	}
 }
