--- a/Integrated Phoenix Industries/Parts/SpaceTug/ipi_spaceTug_crewModule.cfg
+++ b/Integrated Phoenix Industries/Parts/SpaceTug/ipi_spaceTug_crewModule.cfg
@@ -5,7 +5,7 @@
 	author = OrbitalPhoenix
 MODEL
 {
-	model = OrbitalPhoenixIndustries/Parts/SpaceTug/ipi_spaceTug_crewModule
+	model = IntegratedPhoenixIndustries/Parts/SpaceTug/ipi_spaceTug_crewModule
 }
 	scale = 1
 	rescaleFactor = 1
@@ -13,14 +13,14 @@ MODEL
 	node_stack_top = 0.0, 0.515, 0.0, 0.0, 1.0, 0.0, 2
 	TechRequired = commandModules
 	entryCost = 8300
-	cost = 4550
+	cost = 7550
 	category = Pods
 	subcategory = 0
-	title = STV-201A Arktos Crew Module
+	title = STV-2A Arktos Crew Module
 	manufacturer = Integrated Phoenix Industries
-	description = The crewed command module for the Space Tug modular spacecraft. Capable of holding 2 crew or 4 on short duration flights. Also has radial attachment points for remote manipulator arms (soon).
+	description = The crewed command module for the Space Tug modular spacecraft. Capable of holding 4 crew on short duration flights. Also has radial attachment points for remote manipulator arms (soon).
 	attachRules = 1,0,1,1,0
-	mass = 3
+	mass = 2.8
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -29,14 +29,14 @@ MODEL
 	maxTemp = 1200
 	skinMaxTemp = 2000
 	vesselType = Lander
-	CrewCapacity = 2
+	CrewCapacity = 4
 	bulkheadProfiles = size2
-	tags = #autoLOC_500333 //#autoLOC_500333 = capsule cmg command control ?eva fly gyro ?iva moment pilot pod react rocket space stab steer torque tug
+	tags = capsule cmg command control ?eva fly gyro ?iva moment pilot pod react rocket space stab steer torque tug spacetug
 	
 	INTERNAL
 	{
 		name = landerCabinInternals
-		offset = 0.0, -0.5, 0.0
+		offset = 0.0, 0.0, 0.2
 	}
 	MODULE
 	{
