--- a/Integrated Phoenix Industries/Patches/BluedogDesignBureau.cfg
+++ b/Integrated Phoenix Industries/Patches/BluedogDesignBureau.cfg
@@ -3,13 +3,27 @@
 	@RESOURCE[LiquidFuel]
 	{
 		@name = LqdHydrogen
-		@amount = 15600
-		@maxAmount = 15600
+		@amount = 10996
+		@maxAmount = 10996
 	}
 	@RESOURCE[Oxidizer]
 	{
-		@amount = 1020
-		@maxAmount = 1020
+		@amount = 733
+		@maxAmount = 733
+	}
+}
+@PART[ipi_spaceTug_mediumPropellantTank]:NEEDS[Bluedog_DB]
+{
+	@RESOURCE[LiquidFuel]
+	{
+		@name = LqdHydrogen
+		@amount = 5498
+		@maxAmount = 5498
+	}
+	@RESOURCE[Oxidizer]
+	{
+		@amount = 366.56
+		@maxAmount = 366.56
 	}
 }
 @PART[ipi_spaceTug_4xEngineMount]:NEEDS[Bluedog_DB]
@@ -17,12 +31,12 @@
 	@RESOURCE[LiquidFuel]
 	{
 		@name = LqdHydrogen
-		@amount = 5700
-		@maxAmount = 5700
+		@amount = 2749
+		@maxAmount = 2749
 	}
 	@RESOURCE[Oxidizer]
 	{
-		@amount = 400
-		@maxAmount = 400
+		@amount = 183.3
+		@maxAmount = 183.3
 	}
 }
